# graduate

./: .env.example  .gitignore  CMakeLists.txt  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  INIT_MENU_GUIDE.md  LARGE_FILE_UPLOAD_README.md  PROJECT_TECH_DOC.md  QUICKSTART.md  README.md  build.sh  cloudisk_frontend_refactor.docx  docker-compose.yml  init.sh  init.sql  logger.txt  message_module_task.docx  test_client.py  test_large_upload.py
build_stale_path_backup/: CMakeCache.txt  Makefile  cmake_install.cmake  lightweight_comm_server  logger.txt
deploy/: cloudisk.service  one_click_deploy.sh
docs/: ADMIN_PANEL_PLAN.md  CLOUDISK_PROJECT_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_REFACTORING.md  FEATURE_OUTLINE.md  IMPLEMENTATION_NOTES.md  LARGE_FILE_UPLOAD_INTEGRATION_GUIDE.md  LARGE_FILE_UPLOAD_PLAN.md  LARGE_FILE_UPLOAD_SUMMARY.md  PROJECT_ANALYSIS.md  PROJECT_STATUS.md  README.md
include/: client_manager.h  database.h  file_manager.h  http_handler.h  http_parser.h  json_helper.h  large_file_upload.h  logger.h  server.h  session_manager.h  thread_pool.h  user_manager.h  utils.h
src/: client_manager.cpp  database.cpp  file_manager.cpp  http_handler.cpp  http_parser.cpp  json_helper.cpp  logger.cpp  main.cpp  server.cpp  session_manager.cpp  thread_pool.cpp  user_manager.cpp  utils.cpp
static/: app.js  index.html  large_file_uploader.js  styles.css  utils.js
static/components/: ContextMenu.js  FileCard.js  FileList.js  Header.js  (+2 more)
tests/: README.md  concurrent_test  concurrent_test.cpp  functional_test.sh  perf_test.sh
(+16 files in other folders)
